# docling-101

./: .gitignore  README.md  legislative-acts.json  main.py  pyproject.toml
.claude/: settings.json
mmcq/: README.md  __init__.py  cli.py  extractor.py  loader.py  models.py  reporter.py  requirements.txt  scorer.py
