[project]
name = "docling-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.95.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "transformers>=5.8.1,<5.9.0",
]
